Dark Mode: some fixes, basic app with text

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #1c1c1c !important;
+  background-color: #1c1c1c;
+  color: white;
 }
 
 code {
